exports[`test Should show the component 1`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <svg
    height="800"
    id="stage"
    width="800">
    <g
      id="zones">
      <g>
        <rect
          className="not-in-focus area okay js-area-standard"
          height="100%"
          id="performing"
          onMouseDown={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          onMouseUp={undefined}
          width="25%"
          x="0"
          y="0">
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0.6000000000000001s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;93.75%;67.5%;78.75%;75%" />
        </rect>
        <text
          className="area-label"
          id="performing-label"
          text-anchor="middle"
          textAnchor="middle"
          x="87%"
          y="50%">
          performing
        </text>
        ;
      </g>
      <g>
        <rect
          className="not-in-focus area okay js-area-standard"
          height="100%"
          id="norming"
          onMouseDown={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          onMouseUp={undefined}
          width="25%"
          x="0"
          y="0">
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0.4s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;62.5%;45%;52.5%;50%" />
        </rect>
        <text
          className="area-label"
          id="norming-label"
          text-anchor="middle"
          textAnchor="middle"
          x="62%"
          y="50%">
          norming
        </text>
        ;
      </g>
      <g>
        <rect
          className="not-in-focus area okay js-area-standard"
          height="100%"
          id="storming"
          onMouseDown={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          onMouseUp={undefined}
          width="25%"
          x="0"
          y="0">
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0.2s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;31.25%;22.5%;26.25%;25%" />
        </rect>
        <text
          className="area-label"
          id="storming-label"
          text-anchor="middle"
          textAnchor="middle"
          x="37%"
          y="50%">
          storming
        </text>
        ;
      </g>
      <g>
        <rect
          className="not-in-focus area okay js-area-standard"
          height="100%"
          id="forming"
          onMouseDown={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          onMouseUp={undefined}
          width="25%"
          x="0"
          y="0">
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;0%;0%;0%;0%" />
        </rect>
        <text
          className="area-label"
          id="forming-label"
          text-anchor="middle"
          textAnchor="middle"
          x="12%"
          y="50%">
          forming
        </text>
        ;
      </g>
    </g>
  </svg>
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <svg
    height="800"
    id="stage"
    width="800"
  >
    <g id="zones">
      <g>
        <rect
          class="not-in-focus area okay js-area-standard"
          height="100%"
          id="performing"
          width="25%"
          x="0"
          y="0"
        >
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0.6000000000000001s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;93.75%;67.5%;78.75%;75%"
          >
          </animate>
        </rect>
        <text
          class="area-label"
          id="performing-label"
          text-anchor="middle"
          textAnchor="middle"
          x="87%"
          y="50%"
        >
          performing
        </text>
        ;
      </g>
      <g>
        <rect
          class="not-in-focus area okay js-area-standard"
          height="100%"
          id="norming"
          width="25%"
          x="0"
          y="0"
        >
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0.4s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;62.5%;45%;52.5%;50%"
          >
          </animate>
        </rect>
        <text
          class="area-label"
          id="norming-label"
          text-anchor="middle"
          textAnchor="middle"
          x="62%"
          y="50%"
        >
          norming
        </text>
        ;
      </g>
      <g>
        <rect
          class="not-in-focus area okay js-area-standard"
          height="100%"
          id="storming"
          width="25%"
          x="0"
          y="0"
        >
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0.2s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;31.25%;22.5%;26.25%;25%"
          >
          </animate>
        </rect>
        <text
          class="area-label"
          id="storming-label"
          text-anchor="middle"
          textAnchor="middle"
          x="37%"
          y="50%"
        >
          storming
        </text>
        ;
      </g>
      <g>
        <rect
          class="not-in-focus area okay js-area-standard"
          height="100%"
          id="forming"
          width="25%"
          x="0"
          y="0"
        >
          <animate
            attributeName="x"
            attributeType="XML"
            begin="0s"
            dur="0.8s"
            fill="freeze"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%;0%;0%;0%;0%"
          >
          </animate>
        </rect>
        <text
          class="area-label"
          id="forming-label"
          text-anchor="middle"
          textAnchor="middle"
          x="12%"
          y="50%"
        >
          forming
        </text>
        ;
      </g>
    </g>
  </svg>
</svg>
`;

exports[`test Should show the stretch area 1`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <g>
    <rect
      className="not-in-focus area okay js-area-standard"
      height="100%"
      id="example"
      onMouseDown={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onMouseUp={undefined}
      width="25%"
      x="0"
      y="0">
      <animate
        attributeName="x"
        attributeType="XML"
        begin="0s"
        dur="0.8s"
        fill="freeze"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%;0%;0%;0%;0%" />
    </rect>
    <text
      className="area-label"
      id="example-label"
      text-anchor="middle"
      textAnchor="middle"
      x="12%"
      y="50%">
      example
    </text>
    ;
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <g>
    <rect
      class="not-in-focus area okay js-area-standard"
      height="100%"
      id="example"
      width="25%"
      x="0"
      y="0"
    >
      <animate
        attributeName="x"
        attributeType="XML"
        begin="0s"
        dur="0.8s"
        fill="freeze"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%;0%;0%;0%;0%"
      >
      </animate>
    </rect>
    <text
      class="area-label"
      id="example-label"
      text-anchor="middle"
      textAnchor="middle"
      x="12%"
      y="50%"
    >
      example
    </text>
    ;
  </g>
</svg>
`;
